[gd_scene load_steps=15 format=3 uid="uid://ba8kn82016cck"]

[ext_resource type="Script" path="res://Scripts/d_white.gd" id="1_fkcf2"]
[ext_resource type="Texture2D" uid="uid://b5ryhganu03r7" path="res://Sprites/General Sprites/D-White sheet.png" id="2_vnbog"]
[ext_resource type="AudioStream" uid="uid://hr1o38iyijtk" path="res://Sfx/SwooshWeak.wav" id="4_uc5dp"]
[ext_resource type="AudioStream" uid="uid://biimbdctau6w3" path="res://Sfx/SwooshStrong2.wav" id="5_f7682"]
[ext_resource type="Texture2D" uid="uid://cjvs0qi5g4bus" path="res://Sprites/HUD/DemonHeartEmpty.png" id="7_tbr1e"]
[ext_resource type="Texture2D" uid="uid://51vf8nbtb68f" path="res://Sprites/HUD/DemonHeartFull.png" id="8_juogk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mhsb"]
resource_local_to_scene = true
size = Vector2(54, 87)

[sub_resource type="Animation" id="Animation_60c45"]
resource_name = "dead"
length = 0.13334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritesheet/Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uh4gi"]
resource_name = "hurt"
length = 0.13334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritesheet/Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dqgel"]
resource_name = "idle"
length = 0.80001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritesheet/Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wm6b0"]
resource_name = "reload"
length = 1.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 26, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound effects/Swoosh2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sound effects/Swoosh1:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spritesheet/Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m3jlb"]
resource_name = "throw"
length = 0.80001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound effects/Swoosh1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sound effects/Swoosh3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spritesheet/Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6x4n"]
_data = {
"dead": SubResource("Animation_60c45"),
"hurt": SubResource("Animation_uh4gi"),
"idle": SubResource("Animation_dqgel"),
"reload": SubResource("Animation_wm6b0"),
"throw": SubResource("Animation_m3jlb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a7d0"]
resource_local_to_scene = true
size = Vector2(20, 85)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["EnemyCollision"]]
position = Vector2(0, -5)
collision_layer = 128
collision_mask = 9
script = ExtResource("1_fkcf2")

[node name="Spritesheet" type="Sprite2D" parent="."]
texture = ExtResource("2_vnbog")
hframes = 6
vframes = 6
frame = 16

[node name="Hurtbox" type="Area2D" parent="Spritesheet" groups=["EnemyHurtbox"]]
collision_layer = 128
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spritesheet/Hurtbox"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_2mhsb")
debug_color = Color(0.947641, 2.31028e-06, 0.582125, 0.42)

[node name="HitDetector" type="RayCast2D" parent="Spritesheet/Hurtbox"]
target_position = Vector2(0, 0)
collision_mask = 9
hit_from_inside = true

[node name="EnzoDetector" type="RayCast2D" parent="Spritesheet"]
modulate = Color(0.0221348, 0.268932, 1.68458e-07, 1)
target_position = Vector2(328, 51)
collision_mask = 13
hit_from_inside = true
collide_with_areas = true

[node name="Marker2D" type="Marker2D" parent="Spritesheet"]
position = Vector2(41, -2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l6x4n")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_4a7d0")

[node name="Marker2D" type="Marker2D" parent="."]
modulate = Color(0.945098, 0, 0.588235, 1)

[node name="Sound effects" type="Node2D" parent="."]

[node name="Swoosh1" type="AudioStreamPlayer2D" parent="Sound effects"]
stream = ExtResource("4_uc5dp")

[node name="Swoosh2" type="AudioStreamPlayer2D" parent="Sound effects"]
stream = ExtResource("4_uc5dp")
pitch_scale = 0.8

[node name="Swoosh3" type="AudioStreamPlayer2D" parent="Sound effects"]
stream = ExtResource("5_f7682")

[node name="Health" type="Node2D" parent="."]
position = Vector2(2, 0)

[node name="Healthbackdrop" type="TextureRect" parent="Health"]
offset_left = -24.0
offset_top = -58.0
offset_right = 24.0
offset_bottom = -34.0
texture = ExtResource("7_tbr1e")
stretch_mode = 1

[node name="Health" type="TextureRect" parent="Health"]
offset_left = -24.0
offset_top = -58.0
offset_right = 24.0
offset_bottom = -34.0
texture = ExtResource("8_juogk")
expand_mode = 1
stretch_mode = 1

[node name="Stuntimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Spritesheet/Hurtbox" to="." method="_on_hurtbox_area_entered"]
